[project]
name = "py-play-money"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jean-Gabriel Young", email = "jean.gabriel.young@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = ["E", "F", "B", "I", "N", "UP", "D", "T20", "W293"]
lint.ignore = ["D203", "D212", "N815"]
# We ignore N815 to stick to the same naming convention as the API

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

lint.exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 100
