[project]
name = "py-play-money"
version = "0.1.0"
description = "Python SDK for playmoney.dev's API"
readme = "README.md"
authors = [
    { name = "Jean-Gabriel Young", email = "jean.gabriel.young@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.11.2",
]

[project.optional-dependencies]
analytics = [
    "matplotlib>=3.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
lint.select = ["C", "E", "F", "B", "I", "N", "UP", "PERF", "PL", "D", "T20", "W"]
lint.ignore = ["D203", "D212", "N803", "N815", "D107"]

[dependency-groups]
dev = [
    "vcrpy>=7.0.0",
]
# We ignore N803 and N815 to stick to the same naming convention as the API
